tests/ui/missing_unsafe.stderr
error[E0133]: call to unsafe function `f` is unsafe and requires unsafe function or block
 --> tests/ui/missing_unsafe.rs:4:12
  |
1 | #[cxx::bridge]
  | -------------- items do not inherit unsafety from separate enclosing items
...
4 |         fn f(x: i32);
  |            ^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior
